<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/AppWidget"
    style="@style/base_match"
    android:background="@mipmap/login_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan">

    <RelativeLayout
        android:id="@+id/rly_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:id="@+id/btn_finish"
            style="@style/base_wrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableLeft="@mipmap/arrow_icon"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:text="@string/text_back"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/base_wrap"
            android:layout_centerInParent="true"
            android:text="@string/title_register"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/title_login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_180"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50">

        <widget.image.FMRadiusNetImageView
            android:id="@+id/iv_picture"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_180"
            android:scaleType="centerCrop"
            android:src="@mipmap/upload_img" />

        <ImageView
            android:id="@+id/iv_add_picture"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@mipmap/icon_register_picture"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_lib"
            style="@style/base_wrap"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_1f232a"
            android:textSize="@dimen/sp_17" />
    </RelativeLayout>

    <widget.ContainsEmojiEditText
        android:id="@+id/ed_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/iv_picture"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/user_nickhint"
        android:maxLength="8"
        android:textColor="@color/gray"
        android:textColorHint="@color/font_main_secondary"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0d5"
        android:layout_below="@id/ed_nickname"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/color_c8c8c8" />

    <LinearLayout
        android:id="@+id/radio_lly"
        style="@style/base_height_wrap"
        android:layout_below="@id/ed_nickname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sex_man"
            style="@style/base_wrap"
            android:layout_marginRight="@dimen/dp_30"
            android:drawableLeft="@mipmap/dues_set_n"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_20"
            android:text="@string/sex_n"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17" />

        <TextView
            android:id="@+id/tv_sex_woman"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:drawableLeft="@mipmap/dues_set_n"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_20"
            android:text="@string/sex_m"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_nexts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_45"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/bg_gray_shape"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:text="@string/button_next"
        android:textColor="@color/font_main_secondary"
        android:textSize="@dimen/sp_16" />

</LinearLayout>
