<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <widget.titlebar.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_c8c8c8"/>
    <RelativeLayout
        android:id="@+id/rl_old_phone"
        style="@style/text_register_phone_style"
        android:layout_below="@id/ry"
        android:layout_marginTop="@dimen/dp_20">


        <widget.ContainsEmojiEditText
            android:id="@+id/edt_old_psw"
            style="@style/base_match"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@null"
            android:digits="@string/login_only_can_input"
            android:gravity="center_vertical"
            android:hint="@string/input_old_psw"
            android:maxLength="16"
            android:textColor="@color/gray"
            android:inputType="textPassword"
            android:textColorHint="@color/font_main_secondary"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_c8c8c8" />

        <ImageView
            android:id="@+id/iv_old_eye"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/bg_eye_select" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_new_phone"
        style="@style/text_register_phone_style"
        android:layout_below="@id/ry"
        android:layout_marginTop="@dimen/dp_20">


        <widget.ContainsEmojiEditText
            android:id="@+id/edt_new_psw"
            style="@style/base_match"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@null"
            android:digits="@string/login_only_can_input"
            android:gravity="center_vertical"
            android:hint="@string/input_new_psw"
            android:maxLength="16"
            android:textColor="@color/gray"
            android:inputType="textPassword"
            android:textColorHint="@color/font_main_secondary"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_c8c8c8" />

        <ImageView
            android:id="@+id/iv_new_eye"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/bg_eye_select" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_psw_hint"/>

    <TextView
        android:id="@+id/btn_nexts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_gray_dcdc_hape"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/bt_complete"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />



</LinearLayout>