<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/AppWidget"
    style="@style/base_match"
    android:background="@color/whites"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan">

    <RelativeLayout
        android:id="@+id/rly_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:id="@+id/btn_finish"
            style="@style/base_wrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableLeft="@mipmap/icon_title_back"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:text="@string/text_back"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/base_wrap"
            android:layout_centerInParent="true"
            android:text="补全账户信息"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/rly_title_bar"
        android:background="@color/color_c8c8c8"/>

    <widget.image.FMRadiusNetImageView
        android:id="@+id/iv_picture"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_140"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_regeister_portrait"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@color/black"/>

    <!-- 输入框  手机-->
    <RelativeLayout
        android:id="@+id/ry_phone"
        style="@style/text_register_phone_style"
        android:layout_below="@id/rly_title_bar"
        android:layout_marginTop="@dimen/dp_20">

        <EditText
            android:id="@+id/register_phone"
            style="@style/base_match"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@null"
            android:hint="@string/hint_binding_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/gray"
            android:textColorHint="@color/font_main_secondary"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0d5"
            android:layout_alignParentBottom="true"
            android:background="@color/color_c8c8c8" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ry"
        style="@style/text_register_phone_style"
        android:layout_below="@id/ry_phone"
        android:layout_marginTop="@dimen/dp_20">
        <!-- 输入框  验证码-->


        <EditText
            android:id="@+id/register_sms_code"
            android:layout_width="@dimen/dp_180"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_8"
            android:background="@null"
            android:hint="验证码(5分钟内有效)"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/gray"
            android:textColorHint="@color/font_main_secondary"
            android:textSize="@dimen/sp_16" />
        <!-- 发送验证码-->
        <TextView
            android:id="@+id/tv_send_code"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/register_sms_code"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/toast_register_code"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0d5"
            android:layout_alignParentBottom="true"
            android:background="@color/color_c8c8c8" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        style="@style/text_register_phone_style"
        android:layout_below="@id/ry"
        android:layout_marginTop="@dimen/dp_20">


        <widget.ContainsEmojiEditText
            android:id="@+id/register_psw"
            style="@style/base_match"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@null"
            android:digits="@string/login_only_can_input"
            android:gravity="center_vertical"
            android:hint="@string/input_register_psw"
            android:maxLength="16"
            android:textColor="@color/gray"
            android:inputType="textPassword"
            android:textColorHint="@color/font_main_secondary"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_c8c8c8" />

        <ImageView
            android:id="@+id/iv_eye"
            style="@style/base_wrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/bg_eye_select" />
    </RelativeLayout>

    <!-- 按钮  下一步-->
    <TextView
        android:id="@+id/btn_nexts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/rl_phone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_orange_shape"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        style="@style/base_wrap"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/btn_nexts"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tv"
            style="@style/base_wrap"
            android:text="@string/register_hint"
            android:textColor="@color/text_font" />

        <TextView
            android:id="@+id/tv_protocol"
            style="@style/base_wrap"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_toRightOf="@id/tv"
            android:text="@string/register_protocol"
            android:textColor="@color/orange" />
    </RelativeLayout>

</LinearLayout>